--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,8 @@ body{
   font-family: Roboto, sans-serif;
 }
 .hidden {
-  display: none;
+  display: none !important;
+}
+[hidden] {
+  display: none !important;
 }
