--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,8 @@
 /* Custom styles */
 body{
   font-family: Roboto, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 .hidden {
   display: none !important;
