--- a/src/components/registration/registration-form/index.css
+++ b/src/components/registration/registration-form/index.css
@@ -78,15 +78,20 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 0 86px;
 }
 .otp-received-note-container .resend-otp-btn {
- background-color: transparent;
- color: #001f60;
- font-weight: 700;
- font-size: 15px;
+  background-color: transparent;
+  color: #001f60;
+  font-weight: 700;
+  font-size: 15px;
 }
 
 .otp-received-note-container .note {
   color: #9f9f9f;
   font-weight: 400;
   font-size: 13px;
- }
-
+}
+.error {
+  border: 2px solid red;
+}
+.error:focus {
+  outline: none;
+}
