added text-box component

--- a/src/components/registration/registration-form/index.css
+++ b/src/components/registration/registration-form/index.css
@@ -49,7 +49,8 @@
   margin-top: 20px;
 }
 
-.mobile-input, .otp-input {
+.mobile-input,
+.otp-input {
   width: 75%;
   border-radius: 5px;
   padding: 10px 10px;
@@ -60,14 +61,14 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance:textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 .otp-received-note-container {
   color: #001f60;
