--- a/src/components/common/dropdown-menu/drop-down-menu.module.css
+++ b/src/components/common/dropdown-menu/drop-down-menu.module.css
@@ -7,13 +7,14 @@
   margin-left: 3px;
 }
 .popup {
-  display: absolute;
+  position: absolute;
   background-color: white;
   border: 1px solid #ccc;
   width: fit-content;
   box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
     0 1px 10px 0 rgb(0 0 0 / 12%);
   border-radius: 4px;
+  z-index: 1;
 }
 .ul {
   list-style: none;
@@ -34,4 +35,16 @@
   color: #082664;
   cursor: pointer;
   font-weight: bold;
+}
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  opacity: 0.5;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 99999999999;
 }
