--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url(./assets/css/common.css);
 .App {
   text-align: center;
 }
@@ -35,17 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-/* Custom styles */
-body{
-  font-family: Roboto, sans-serif;
-  width: 100%;
-  height: 100%;
-}
-.hidden {
-  display: none !important;
-}
-[hidden] {
-  display: none !important;
 }
