--- a/src/components/common/dropdown-menu/drop-down-menu.module.css
+++ b/src/components/common/dropdown-menu/drop-down-menu.module.css
@@ -14,7 +14,7 @@
   box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
     0 1px 10px 0 rgb(0 0 0 / 12%);
   border-radius: 4px;
-  z-index: 1;
+  z-index: 2;
 }
 .ul {
   list-style: none;
@@ -27,7 +27,7 @@
   line-height: 30px;
 }
 .ulItem:hover {
-  background-color: lightgrey;
+  background-color: #f8f9fa;
 }
 .btn {
   border: none;
@@ -46,5 +46,5 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 99999999999;
+  z-index: 1;
 }
