Updated benefis card

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,6 +6,8 @@
   --pale-silver: #c9c4c4;
   --dark-charcoal: #313131;
   --nickel: #727272;
+  --orange: #ff9840;
+  --green: #008000;
   --font-family: Roboto, sans-serif;
 }
 /* Custom styles */
