--- a/src/components/common/spinner/index.css
+++ b/src/components/common/spinner/index.css
@@ -32,6 +32,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(255,255,255,0.7);
+  /* background-color: rgba(255,255,255,0.7); */
+  background-color: rgb(168, 168, 168,0.7);
   z-index: 9999;
 }
